[package]
name = "woods"
version = "0.1.0"
edition = "2023"
authors = ["Isaac Cooke"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO change this before the game is released
[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
rapier = { version = "*", features = [ "simd-stable" ]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
