[package]
name = "woods"
version = "0.1.0"
edition = "2021"
authors = ["Isaac Cooke"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO change this before the game is released
[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_xpbd_3d = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
